--- a/views/about.html
+++ b/views/about.html
@@ -5,21 +5,25 @@
 </head>
 <body>
   <div>
-  <div>
-  <nav class="navbar navbar-inverse" role="navigation" style="padding-left:130px;">
+    <div>
+      <nav class="navbar navbar-inverse" role="navigation" style="padding-left:130px;">
          <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="/about">About<span class="sr-only">(current)</span></a></li>
-        <li><a href="/contact">Contacts</a></li>
-      </ul>
-</nav>
-</div>
-  <br/>
-  <div class="jumbotron">
+         <li><a href="/">Home</a></li>
+         <li class="active"><a href="/about">About<span class="sr-only">(current)</span></a></li>
+         <li><a href="/contact">Contacts</a></li>
+         </ul>
+      </nav>
+    </div>
+  </div>
+    <br/>
+<div class="container">
+<div class="row">
+<div class="col-lg-8">
   <p>
-    Put detail description about you and your company.
+    I am an aspiring DevOps engineer that wants to conquire the world. Now who doesn't?
   </p>
 </div>
-  </div>
+</div>
+</div>
 </body>
 </html>
