--- a/views/contact.html
+++ b/views/contact.html
@@ -15,5 +15,17 @@
     </nav>
     </div>
   </div>
+
+  <div class="container">
+<div class="row">
+<div class="col-lg-8">
+	<h2> Contact me at: </h2>
+	<h3> m.e.morozov1@gmail.com </h3>
+</div>
+</div>
+</div>
+
+
+
 </body>
 </html>
