--- a/views/index.html
+++ b/views/index.html
@@ -28,22 +28,38 @@
 	<h2> Projects </h2>
 <div class="list-group"> 
   <a href="http://blog.cheapestdomainever.club" class="list-group-item">
-  <h4 class="list-group-item-heading">nodejs_blogapp </h4>
+  <h4 class="list-group-item-heading">Dummy blog app </h4>
     <p class="list-group-item-text">https://github.com/mikefrostov/nodejs_blogapp. </p>
   </a>
   
   <a href="http://jenkins.cheapestdomainever.club" class="list-group-item">
-  <h4 class="list-group-item-heading">jenkins</h4>
+  <h4 class="list-group-item-heading">Jenkins</h4>
     <p class="list-group-item-text">Runs inside of a docker container. CI/CD using ssh to build and deploy docker images with apps</p>
   </a>
   <a href="http://grafana.cheapestdomainever.club" class="list-group-item">
-  <h4 class="list-group-item-heading">grafana</h4>
+  <h4 class="list-group-item-heading">Grafana</h4>
     <p class="list-group-item-text">Server and app monitoring using prometheus</p>
   </a>
   <a href="http://sitik.cheapestdomainever.club" class="list-group-item">
   <h4 class="list-group-item-heading">sitik</h4>
     <p class="list-group-item-text">https://github.com/SoloEkaterina/sitik</p>
   </a>
+
+  </a>
+  <a href="/infra" class="list-group-item">
+  <h4 class="list-group-item-heading">DevOps home lab</h4>
+    <p class="list-group-item-text">Servers, tools, infrastructure</p>
+  </a>
+
+  <a href="/ftp" class="list-group-item">
+  <h4 class="list-group-item-heading">ftp server</h4>
+    <p class="list-group-item-text"> Routed from a file storage</p>
+  </a>
+
+
+
+
+
 </div></div></div>
 </div>
 </div>
