Projects description pages

--- a/views/index.html
+++ b/views/index.html
@@ -27,33 +27,34 @@
 <div class="col-lg-8">
 	<h2> Projects </h2>
 <div class="list-group"> 
-  <a href="http://blog.cheapestdomainever.club" class="list-group-item">
+
+  <a href="/nodejs_blogapp" class="list-group-item">
   <h4 class="list-group-item-heading">Dummy blog app </h4>
     <p class="list-group-item-text">https://github.com/mikefrostov/nodejs_blogapp. </p>
   </a>
   
-  <a href="http://jenkins.cheapestdomainever.club" class="list-group-item">
+  <a href="/jenkins" class="list-group-item">
   <h4 class="list-group-item-heading">Jenkins</h4>
-    <p class="list-group-item-text">Runs inside of a docker container. CI/CD using ssh to build and deploy docker images with apps</p>
+    <p class="list-group-item-text">CI/CD</p>
   </a>
-  <a href="http://grafana.cheapestdomainever.club" class="list-group-item">
+  <a href="/grafana" class="list-group-item">
   <h4 class="list-group-item-heading">Grafana</h4>
-    <p class="list-group-item-text">Server and app monitoring using prometheus</p>
+    <p class="list-group-item-text">Infrastructure monitoring</p>
   </a>
-  <a href="http://sitik.cheapestdomainever.club" class="list-group-item">
+  <a href="/sitik" class="list-group-item">
   <h4 class="list-group-item-heading">sitik</h4>
-    <p class="list-group-item-text">https://github.com/SoloEkaterina/sitik</p>
+    <p class="list-group-item-text">Front-End project</p>
   </a>
 
   </a>
-  <a href="/infra" class="list-group-item">
+  <a href="/devops_lab" class="list-group-item">
   <h4 class="list-group-item-heading">DevOps home lab</h4>
-    <p class="list-group-item-text">Servers, tools, infrastructure</p>
+    <p class="list-group-item-text">Infrastructure description</p>
   </a>
 
   <a href="/ftp" class="list-group-item">
   <h4 class="list-group-item-heading">ftp server</h4>
-    <p class="list-group-item-text"> Routed from a file storage</p>
+    <p class="list-group-item-text"> File storage</p>
   </a>
 
 
