nodejs blog info

--- a/views/nodejs_blogapp.html
+++ b/views/nodejs_blogapp.html
@@ -37,6 +37,8 @@
 
         <!-- Author -->
         <p class="lead">
+	<a href="http://blog.cheapestdomainever.club/">http://blog.cheapestdomainever.club/</a>
+        <h5> repo: </h5>
 	<a href="http://github.com/mikefrostov/nodejs_blogapp">http://github.com/mikefrostov/nodejs_blogapp</a>
         </p>
 
