--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Single page web app using Angularjs</title>
+<title>Study projects</title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -25,25 +25,25 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-8">
-	<h2> Projects </h2>
+	<h2> Study projects </h2>
 <div class="list-group"> 
 
   <a href="/nodejs_blogapp" class="list-group-item">
   <h4 class="list-group-item-heading">Dummy blog app </h4>
-    <p class="list-group-item-text">https://github.com/mikefrostov/nodejs_blogapp. </p>
+    <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
   </a>
   
   <a href="/jenkins" class="list-group-item">
   <h4 class="list-group-item-heading">Jenkins</h4>
-    <p class="list-group-item-text">CI/CD</p>
+    <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
   </a>
   <a href="/grafana" class="list-group-item">
   <h4 class="list-group-item-heading">Grafana</h4>
-    <p class="list-group-item-text">Infrastructure monitoring</p>
+    <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
   </a>
   <a href="/sitik" class="list-group-item">
   <h4 class="list-group-item-heading">sitik</h4>
-    <p class="list-group-item-text">Front-End project</p>
+    <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
   </a>
 
   </a>
@@ -54,7 +54,7 @@
 
   <a href="/ftp" class="list-group-item">
   <h4 class="list-group-item-heading">ftp server</h4>
-    <p class="list-group-item-text"> File storage</p>
+    <p class="list-group-item-text"> ftp://cheapestdomainever.club </p>
   </a>
 
 
