dummy blogapp finished

--- a/views/index.html
+++ b/views/index.html
@@ -26,13 +26,13 @@
 <div class="row">
 <div class="col-lg-8">
 	<h2> Study projects </h2>
-<div class="list-group"> 
+<div class="list-group">
 
   <a href="/nodejs_blogapp" class="list-group-item">
   <h4 class="list-group-item-heading">Dummy blog app </h4>
     <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
   </a>
-  
+
   <a href="/jenkins" class="list-group-item">
   <h4 class="list-group-item-heading">Jenkins</h4>
     <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
@@ -57,7 +57,10 @@
     <p class="list-group-item-text"> ftp://cheapestdomainever.club </p>
   </a>
 
-
+  <a href="/rvproxy" class="list-group-item">
+  <h4 class="list-group-item-heading"> Nginx Reverse proxy </h4>
+    <p class="list-group-item-text"> Runs on cheapestdomainever.club:80 </p>
+  </a>
 
 
 
@@ -66,4 +69,3 @@
 </div>
 </body>
 </html>
-
