--- a/views/nodejs_blogapp.html
+++ b/views/nodejs_blogapp.html
@@ -47,6 +47,7 @@
         <!-- Preview Image -->
         <img class="img-fluid rounded" src="nodejs_blogapp.png" alt="">
         <!-- Post Content -->
+        <hr>
 	<p class="lead"> This project has evolved from a job interview task, where I had to implement hello world app that may be containerized and deployed to a kubernetes along with metrics. App includes: </p>
 
         <ul>
@@ -88,7 +89,7 @@
         <hr>
 
 
-        <p class="lead"> The script filters the container ID by the tag name and removes it. New one is built instead and run. The connections are handled by the <a href="#"> reverse proxy </a></p>
+        <p class="lead"> The script filters the container ID by the tag name and removes it. New one is built instead. The connections are handled by the <a href="#"> reverse proxy </a></p>
 
         <hr>
 <br>
