--- a/views/jenkins.html
+++ b/views/jenkins.html
@@ -35,40 +35,43 @@
         <h1 class="mt-4">Post Title</h1>
 
         <!-- Author -->
-        <p class="lead">
-          by
-          <a href="#">Start Bootstrap</a>
-        </p>
+
+        <h2><a href="http://jenkins.cheapestdomainever.club/">Login page</a></h2>
+
 
         <hr>
 
-        <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
-
-        <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="jenkins-items.png" style="width:1400px;height:500px;" alt="">
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+        <p class="lead">I use Jenkins for redeploying apps after changes had been pushed to the respective repositories. I have manually created tasks for each project.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+        <hr>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
 
-        <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
-          </footer>
-        </blockquote>
+        <p class="lead">At the moment I am reading about groovy and Jenkinsfile in order to automate the CI/CD component. </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+        <hr>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+        <!-- Preview Image -->
+        <img class="img-fluid rounded" src="jenkins_deploy_nodejs_blogapp.png" style="width:1000px;height:210px;" alt="">
+
+        <hr>
+
+        <p class="lead"> Yet so far I was using bash to deploy apps.</p>
+        <hr>
+
+        <!-- Preview Image -->
+        <img class="img-fluid rounded" src="jenkins-pipeline.png" style="width:1000px;height:300px;" alt="">
+
+        <hr>
+
+        <p class="lead">I have installed nodejs plugin so that app could be testend inside of jenkins and later deployed.</p>
+
 
         <hr>
 
@@ -77,4 +80,3 @@
 </div>
 </body>
 </html>
-
