--- a/views/nodejs_blogapp.html
+++ b/views/nodejs_blogapp.html
@@ -89,7 +89,7 @@
         <hr>
 
 
-        <p class="lead"> The script filters the container ID by the tag name and removes it. New one is built instead. The connections are handled by the <a href="#"> reverse proxy </a></p>
+        <p class="lead"> The script filters the container ID by the tag name and removes it. New one is built instead. The connections are handled by the <a href="/rvproxy"> reverse proxy </a></p>
 
         <hr>
 <br>
