--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,23 @@
 <div class="list-group">
 
   <a href="/nodejs_blogapp" class="list-group-item">
-  <h4 class="list-group-item-heading">Dummy blog app </h4>
+  <h4 class="list-group-item-heading"> Nodejs blog app </h4>
     <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
+  </a>
+
+  <a href="/php" class="list-group-item">
+  <h4 class="list-group-item-heading"> PHP blog app</h4>
+    <p class="list-group-item-text"> PHP apps containerization and deployment </p>
+  </a>
+
+  <a href="/docker" class="list-group-item">
+  <h4 class="list-group-item-heading"> Python Flask blog </h4>
+    <p class="list-group-item-text"> Blogging app written along with API </p>
+  </a>
+
+  <a href="/docker" class="list-group-item">
+  <h4 class="list-group-item-heading"> Python Flask-based microservices app </h4>
+    <p class="list-group-item-text"> Development, infrastructure deployment and management project </p>
   </a>
 
   <a href="/jenkins" class="list-group-item">
@@ -42,18 +57,18 @@
     <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
   </a>
   <a href="/sitik" class="list-group-item">
-  <h4 class="list-group-item-heading">sitik</h4>
+  <h4 class="list-group-item-heading">Front-end playground</h4>
     <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
   </a>
 
   </a>
   <a href="/devops_lab" class="list-group-item">
-  <h4 class="list-group-item-heading">DevOps home lab</h4>
+  <h4 class="list-group-item-heading">Bare-metal home lab</h4>
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
 
-  <a href="/ftp" class="list-group-item">
-  <h4 class="list-group-item-heading">ftp server</h4>
+  <a href="ftp://cheapestdomainever.club" class="list-group-item">
+  <h4 class="list-group-item-heading">File server</h4>
     <p class="list-group-item-text"> ftp://cheapestdomainever.club </p>
   </a>
 
@@ -62,6 +77,38 @@
     <p class="list-group-item-text"> Runs on cheapestdomainever.club:80 </p>
   </a>
 
+
+    <a href="/elk" class="list-group-item">
+  <h4 class="list-group-item-heading"> ELK </h4>
+    <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
+  </a>
+
+
+    <a href="/hadoop" class="list-group-item">
+  <h4 class="list-group-item-heading"> Hadoop  </h4>
+    <p class="list-group-item-text"> HDFS YARN MapReduce. Big data study projects </p>
+  </a>
+
+
+  <a href="/cloud" class="list-group-item">
+  <h4 class="list-group-item-heading"> IaC </h4>
+    <p class="list-group-item-text"> Cloud infrastructure using Terraform GC AWS methodoligies studies </p>
+  </a>
+
+    <a href="/zabbix" class="list-group-item">
+  <h4 class="list-group-item-heading"> Zabbix </h4>
+    <p class="list-group-item-text"> LAMP-based monitoring tools </p>
+  </a>
+
+  <a href="/kubernetes" class="list-group-item">
+  <h4 class="list-group-item-heading"> Kubernetes </h4>
+    <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Ingress...  </p>
+  </a>
+
+  <a href="/docker" class="list-group-item">
+  <h4 class="list-group-item-heading"> Docker </h4>
+    <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
+  </a>
 
 
 </div></div></div>
