--- a/views/jenkins.html
+++ b/views/jenkins.html
@@ -32,7 +32,7 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Post Title</h1>
+        <h1 class="mt-4">Jenkins GUI CI/CD setup for projects deployment</h1>
 
         <!-- Author -->
 
