reorganization and new pages

--- a/views/nodejs-blogapp.html
+++ b/views/nodejs-blogapp.html
@@ -37,9 +37,9 @@
 
         <!-- Author -->
 
-	<h2><a href="http://blog.cheapestdomainever.club/">Look at it</a></h2>
+	<h2><a href="http://blog.cheapestdomainever.club/"> Check it out </a></h2>
 	<hr>
-	<h3><a href="http://github.com/mikefrostov/nodejs_blogapp">See the Repository</a></h3>
+	<h4><a href="http://github.com/mikefrostov/nodejs_blogapp">See the Repository</a></h4>
 
         <hr>
 
