--- a/views/index.html
+++ b/views/index.html
@@ -25,10 +25,16 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-8">
-	<h2> Study projects </h2>
+<h2> Study projects </h2>
+
+<hr>
+
+<br>
+
+<h3> Web-app Development </h3>
 <div class="list-group">
 
-  <a href="/nodejs_blogapp" class="list-group-item">
+  <a href="/nodejs-blogapp" class="list-group-item">
   <h4 class="list-group-item-heading"> Nodejs blog app </h4>
     <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
   </a>
@@ -38,31 +44,52 @@
     <p class="list-group-item-text"> PHP apps containerization and deployment </p>
   </a>
 
-  <a href="/docker" class="list-group-item">
+  <a href="/python-flask" class="list-group-item">
   <h4 class="list-group-item-heading"> Python Flask blog </h4>
     <p class="list-group-item-text"> Blogging app written along with API </p>
   </a>
 
-  <a href="/docker" class="list-group-item">
+  <a href="/python-flask-microsvc" class="list-group-item">
   <h4 class="list-group-item-heading"> Python Flask-based microservices app </h4>
     <p class="list-group-item-text"> Development, infrastructure deployment and management project </p>
   </a>
 
-  <a href="/jenkins" class="list-group-item">
-  <h4 class="list-group-item-heading">Jenkins</h4>
-    <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
-  </a>
-  <a href="/grafana" class="list-group-item">
-  <h4 class="list-group-item-heading">Grafana</h4>
-    <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
-  </a>
   <a href="/sitik" class="list-group-item">
   <h4 class="list-group-item-heading">Front-end playground</h4>
     <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
   </a>
+</div>
 
+<br>
+
+<h3> Continuous Integration / Deployment</h3>
+<div class="list-group">
+  <a href="/jenkins" class="list-group-item">
+  <h4 class="list-group-item-heading">Jenkins</h4>
+    <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
   </a>
-  <a href="/devops_lab" class="list-group-item">
+</div>
+
+<br>
+
+<h3> Monitoring </h3>
+<div class="list-group">
+  <a href="/grafana" class="list-group-item">
+  <h4 class="list-group-item-heading">Grafana</h4>
+    <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
+  </a>
+
+  <a href="/zabbix" class="list-group-item">
+    <h4 class="list-group-item-heading"> Zabbix </h4>
+      <p class="list-group-item-text"> LAMP-based monitoring tools </p>
+  </a>
+</div>
+
+<br>
+
+<h3> Infrastructure </h3>
+<div class="list-group">
+  <a href="/home-lab" class="list-group-item">
   <h4 class="list-group-item-heading">Bare-metal home lab</h4>
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
@@ -78,27 +105,31 @@
   </a>
 
 
-    <a href="/elk" class="list-group-item">
+  <a href="/elk" class="list-group-item">
   <h4 class="list-group-item-heading"> ELK </h4>
     <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
   </a>
+</div>
 
+<br>
 
+<h3> Big Data </h3>
+<div class="list-group">
     <a href="/hadoop" class="list-group-item">
   <h4 class="list-group-item-heading"> Hadoop  </h4>
     <p class="list-group-item-text"> HDFS YARN MapReduce. Big data study projects </p>
   </a>
+</div>
 
+<br>
 
+<h3> Cloud technologies and virtualization </h3>
+<div class="list-group">
   <a href="/cloud" class="list-group-item">
   <h4 class="list-group-item-heading"> IaC </h4>
     <p class="list-group-item-text"> Cloud infrastructure using Terraform GC AWS methodoligies studies </p>
   </a>
 
-    <a href="/zabbix" class="list-group-item">
-  <h4 class="list-group-item-heading"> Zabbix </h4>
-    <p class="list-group-item-text"> LAMP-based monitoring tools </p>
-  </a>
 
   <a href="/kubernetes" class="list-group-item">
   <h4 class="list-group-item-heading"> Kubernetes </h4>
@@ -110,8 +141,14 @@
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
 
+  <a href="/libvirt" class="list-group-item">
+  <h4 class="list-group-item-heading"> Docker </h4>
+    <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
+  </a>
 
-</div></div></div>
+</div>
+
+</div></div>
 </div>
 </div>
 </body>
