disabled unfinished posts

--- a/views/index.html
+++ b/views/index.html
@@ -39,17 +39,17 @@
     <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
   </a>
 
-  <a href="/php" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> PHP blog app</h4>
     <p class="list-group-item-text"> PHP apps containerization and deployment </p>
   </a>
 
-  <a href="/python-flask" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Python Flask blog </h4>
     <p class="list-group-item-text"> Blogging app written along with API </p>
   </a>
 
-  <a href="/python-flask-microsvc" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Python Flask-based microservices app </h4>
     <p class="list-group-item-text"> Development, infrastructure deployment and management project </p>
   </a>
@@ -79,7 +79,7 @@
     <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
   </a>
 
-  <a href="/zabbix" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
     <h4 class="list-group-item-heading"> Zabbix </h4>
       <p class="list-group-item-text"> LAMP-based monitoring tools </p>
   </a>
@@ -89,7 +89,7 @@
 
 <h3> Infrastructure </h3>
 <div class="list-group">
-  <a href="/home-lab" class="list-group-item">
+  <a href="/#" class="list-group-item disabled">
   <h4 class="list-group-item-heading">Bare-metal home lab</h4>
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
@@ -105,7 +105,7 @@
   </a>
 
 
-  <a href="/elk" class="list-group-item">
+  <a href="/#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> ELK </h4>
     <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
   </a>
@@ -115,7 +115,7 @@
 
 <h3> Big Data </h3>
 <div class="list-group">
-    <a href="/hadoop" class="list-group-item">
+    <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Hadoop  </h4>
     <p class="list-group-item-text"> HDFS YARN MapReduce. Big data study projects </p>
   </a>
@@ -125,23 +125,23 @@
 
 <h3> Cloud technologies and virtualization </h3>
 <div class="list-group">
-  <a href="/cloud" class="list-group-item">
+  <a href="/#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> IaC </h4>
     <p class="list-group-item-text"> Cloud infrastructure using Terraform GC AWS methodoligies studies </p>
   </a>
 
 
-  <a href="/kubernetes" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Kubernetes </h4>
     <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Ingress...  </p>
   </a>
 
-  <a href="/docker" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Docker </h4>
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
 
-  <a href="/libvirt" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Docker </h4>
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
