--- a/views/sitik.html
+++ b/views/sitik.html
@@ -36,7 +36,7 @@
 
         <!-- Author -->
         <p class="lead">
-          <h2><a href="http://sitik.cheapestdomainever.club/">Look at it</a></h2>
+          <h2><a href="http://sitik.cheapestdomainever.club/">Check it out</a></h2>
         </p>
         <hr>
         <br>
@@ -45,7 +45,7 @@
         <br>
         <br>
 
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+        <p class="lead"> This project is mainly for tryouts of Front-End technologies and frameworks. This started as a project for a friend, she is making her first steps in Front-End developing. I help her in studies. </p>
 
         <!-- Preview Image -->
         <img class="img-fluid rounded" src="sitik.png" alt="">
@@ -54,14 +54,9 @@
 
         <!-- Post Content -->
 
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+        <p class="lead"> I have setup CI/CD for this project same as for other projects so there wouldn't be any manual work needed to deliver changes to the "production" </p>
 
         <img class="img-fluid rounded" src="jenkins_sitik_build.png" alt="">
-
-        <hr>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-      
 
 
 
