main page new items

--- a/views/index.html
+++ b/views/index.html
@@ -68,6 +68,23 @@
   <h4 class="list-group-item-heading">Jenkins</h4>
     <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
   </a>
+
+
+  <a href="/teamcity" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">Teamcity</h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="/teamcity" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">GitlabCI</h4>
+    <p class="list-group-item-text"> Not implemented yet</p>
+  </a>
+
+    <a href="/teamcity" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">Bamboo</h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
 </div>
 
 <br>
@@ -141,10 +158,6 @@
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Docker </h4>
-    <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
-  </a>
 
 </div>
 
