main page items: databases

--- a/views/index.html
+++ b/views/index.html
@@ -157,9 +157,33 @@
   <h4 class="list-group-item-heading"> Docker </h4>
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
+</div>
+
+<h3> Databases administration </h3>
+<div class="list-group">
+  <a href="/#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> SQLite </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="/#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Pgsql  </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+    <a href="/#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> mariadb/mysql  </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+    <a href="/#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Nosql  </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
 
 
 </div>
+
 
 </div></div>
 </div>
