ansible item on main

--- a/views/index.html
+++ b/views/index.html
@@ -89,6 +89,29 @@
 
 <br>
 
+<h3> Qa Automation </h3>
+<div class="list-group">
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">Python</h4>
+    <p class="list-group-item-text"> Pytest, unittest, allure, fixtures, REST api testing </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">JavaScript</h4>
+    <p class="list-group-item-text"> Mocha, Cucumber </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Selenium </h4>
+    <p class="list-group-item-text"> A bit of Java + webdriver  </p>
+  </a>
+
+</div>
+
+
+<br>
+
+
 <h3> Monitoring </h3>
 <div class="list-group">
   <a href="/grafana" class="list-group-item">
@@ -122,10 +145,18 @@
   </a>
 
 
-  <a href="/#" class="list-group-item disabled">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> ELK </h4>
     <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
   </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Ansible </h4>
+    <p class="list-group-item-text"> Configuration management </p>
+  </a>
+
+
+
 </div>
 
 <br>
@@ -157,6 +188,19 @@
   <h4 class="list-group-item-heading"> Docker </h4>
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Virtual Machines </h4>
+    <p class="list-group-item-text"> KVM+Libvirt, Virtualbox </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Vagrant </h4>
+    <p class="list-group-item-text"> Vagrantfiles, provisioning with ansible </p>
+  </a>
+
+
+
 </div>
 
 <h3> Databases administration </h3>
