New items for main page

--- a/views/index.html
+++ b/views/index.html
@@ -50,6 +50,12 @@
   </a>
 
   <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Python Django App </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Python Flask-based microservices app </h4>
     <p class="list-group-item-text"> Development, infrastructure deployment and management project </p>
   </a>
@@ -58,6 +64,27 @@
   <h4 class="list-group-item-heading">Front-end playground</h4>
     <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
   </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> MEAN stack </h4>
+    <p class="list-group-item-text"> Mongodb Expressjs Angular Nodejs </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> MERN stack </h4>
+    <p class="list-group-item-text"> Reactjs app </p>
+  </a>
+
+    <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> VueJS </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> JQuery </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
 </div>
 
 <br>
@@ -70,24 +97,69 @@
   </a>
 
 
-  <a href="/teamcity" class="list-group-item disabled">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading">Teamcity</h4>
     <p class="list-group-item-text"> Not implemented yet </p>
   </a>
 
-  <a href="/teamcity" class="list-group-item disabled">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading">GitlabCI</h4>
     <p class="list-group-item-text"> Not implemented yet</p>
   </a>
 
-    <a href="/teamcity" class="list-group-item disabled">
+    <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading">Bamboo</h4>
     <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+<h4 class="list-group-item-heading">TravisCI</h4>
+  <p class="list-group-item-text"> Not implemented yet </p>
+</a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> CircleCI </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> GoCD </h4>
+    <p class="list-group-item-text"> Not implemented </p>
   </a>
 
 </div>
 
 <br>
+
+
+<h3> Build tools </h3>
+<div class="list-group">
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">make</h4>
+    <p class="list-group-item-text"> Makefiles c/c++ gcc build-utils etc</p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">Cmake</h4>
+    <p class="list-group-item-text"> crossplatform make</p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">Packaging </h4>
+    <p class="list-group-item-text"> Deb, rpm, pip, npm</p>
+  </a>
+
+    <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading">ant, maven, gradle</h4>
+    <p class="list-group-item-text"> Java build systems</p>
+  </a>
+
+    <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Gulp, webpack, babel, uglifier, grunt </h4>
+    <p class="list-group-item-text"> JavaScript build tools</p>
+  </a>
+</div>
+
 
 <h3> Qa Automation </h3>
 <div class="list-group">
@@ -105,6 +177,12 @@
   <h4 class="list-group-item-heading"> Selenium </h4>
     <p class="list-group-item-text"> A bit of Java + webdriver  </p>
   </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Performance testing </h4>
+    <p class="list-group-item-text"> Loadrunner, Locust, JMeter  </p>
+  </a>
+
 
 </div>
 
@@ -155,7 +233,15 @@
     <p class="list-group-item-text"> Configuration management </p>
   </a>
 
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> RabbitMQ </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
 
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Celery </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
 
 </div>
 
@@ -175,7 +261,7 @@
 <div class="list-group">
   <a href="/#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> IaC </h4>
-    <p class="list-group-item-text"> Cloud infrastructure using Terraform GC AWS methodoligies studies </p>
+    <p class="list-group-item-text"> Cloud infrastructure </p>
   </a>
 
 
@@ -183,6 +269,19 @@
   <h4 class="list-group-item-heading"> Kubernetes </h4>
     <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Ingress...  </p>
   </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> OpenShift </h4>
+    <p class="list-group-item-text"> Not Implemented yet  </p>
+  </a>
+
+
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> OpenStack </h4>
+    <p class="list-group-item-text"> Not Implemented yet  </p>
+  </a>
+
 
   <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> Docker </h4>
@@ -199,6 +298,20 @@
     <p class="list-group-item-text"> Vagrantfiles, provisioning with ansible </p>
   </a>
 
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Packer </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Vault </h4>
+    <p class="list-group-item-text"> Not implemented yet </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Consul </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
 
 
 </div>
@@ -221,10 +334,35 @@
   </a>
 
     <a href="/#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Nosql  </h4>
+  <h4 class="list-group-item-heading"> Redis </h4>
     <p class="list-group-item-text"> Not implemented yet </p>
   </a>
 
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Cassandra </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Giraph </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Riak </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> Mongodb </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
+
+  <a href="#" class="list-group-item disabled">
+  <h4 class="list-group-item-heading"> InfluxDB </h4>
+    <p class="list-group-item-text"> Not implemented </p>
+  </a>
 
 </div>
 
