koa react project

--- a/views/index.html
+++ b/views/index.html
@@ -75,6 +75,13 @@
     <p class="list-group-item-text"> Reactjs app </p>
   </a>
 
+
+  <a href="/koareact" class="list-group-item">
+  <h4 class="list-group-item-heading"> KRPN stack </h4>
+    <p class="list-group-item-text"> Koajs Reactjs Postgres Nodejs to-do app </p>
+  </a>
+
+
     <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> VueJS </h4>
     <p class="list-group-item-text"> Not implemented </p>
