--- a/views/home-lab.html
+++ b/views/home-lab.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Single page web app using Angularjs</title>
+<title>Home lab</title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -32,13 +32,8 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Post Title</h1>
+        <h1 class="mt-4">Home lab</h1>
 
-        <!-- Author -->
-        <p class="lead">
-          by
-          <a href="#">Start Bootstrap</a>
-        </p>
 
         <hr>
 
@@ -48,27 +43,25 @@
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="home-lab.jpeg" style="width:470px;height:800px;" alt="">
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+	<p class="lead">I use three personal computers for my devops tryouts. </p>
+	<p> 1) An old laptop with Core2Duo onboard is used as a 24/7 low power (45watt) server. It runs Docker engine with containers that host my apps with jenkins and grafana and other stuff. Ubuntu 16 is run in this machine as the most stable for these outdated platforms </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+        <p> 2) Another PC ATX-formfactor, the one with drawing on the side, has amd6350 onboard and is used as a compute node. It has 24gb RAM and two GPUs in it, makes it great for virtualization and GPU passtrhough experiments. Centos 7 is installed with virtualization provided by VirtualBox (or sometimes KVM, I use either of those). Vagrant is used for starting up a multiple of tools like Kubernetes, hadoop cluster, ELK and others for studies. </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+        <p> 3) For the third pc I cramed in mini-itx board with an integrated amde-2000 cpu and 5 harddrives, I use it as a samba server and a ftp server. </p>
+        <hr>
 
-        <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
-          </footer>
-        </blockquote>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+
+        <p class="lead"> For infrastructure planning and management I use miro (ex-realtimeboard). This helps to have a concise map in my head, so its easier to come up with new ideas on what to add.  </p>
+
+                <img class="img-fluid rounded" src="miro_infrastructure.png" style="width:1000px;height:470px;" alt="">
 
         <hr>
 
