--- a/views/index.html
+++ b/views/index.html
@@ -214,7 +214,7 @@
 
 <h3> Infrastructure </h3>
 <div class="list-group">
-  <a href="/#" class="list-group-item disabled">
+  <a href="/home-lab" class="list-group-item">
   <h4 class="list-group-item-heading">Bare-metal home lab</h4>
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
