--- a/views/index.html
+++ b/views/index.html
@@ -330,9 +330,9 @@
     <p class="list-group-item-text"> Not implemented yet </p>
   </a>
 
-  <a href="/#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Pgsql  </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
+  <a href="/postgres" class="list-group-item">
+  <h4 class="list-group-item-heading"> Postgresql  </h4>
+    <p class="list-group-item-text"> Sharding, replication, containerization </p>
   </a>
 
     <a href="/#" class="list-group-item disabled">
